No public description
PiperOrigin-RevId: 721743062

--- a/mediapipe/framework/tool/BUILD
+++ b/mediapipe/framework/tool/BUILD
@@ -318,6 +318,7 @@ mediapipe_cc_test(
     # A non-empty "data" param is needed to build the "_test_wasm" target.
     data = [":node_chain_subgraph.proto"],
     requires_full_emulation = False,
+    test_host = None,
     deps = [
         ":node_chain_subgraph_cc_proto",
         ":node_chain_subgraph_options_lib",
@@ -864,6 +865,7 @@ mediapipe_cc_test(
     timeout = "long",
     srcs = ["switch_demux_calculator_test.cc"],
     requires_full_emulation = False,
+    test_host = None,
     deps = [
         ":container_util",
         ":switch_demux_calculator",
@@ -901,6 +903,7 @@ mediapipe_cc_test(
     timeout = "long",
     srcs = ["switch_mux_calculator_test.cc"],
     requires_full_emulation = False,
+    test_host = None,
     deps = [
         ":container_util",
         ":switch_mux_calculator",
