add calculators to set detection confidence on both normalizedlandmarklist and landmarklist

--- a/mediapipe/calculators/util/BUILD
+++ b/mediapipe/calculators/util/BUILD
@@ -1851,3 +1851,13 @@ cc_test(
         "@com_google_absl//absl/status",
     ],
 )
+
+cc_library(
+    name = "confidence_landmark_merger_calculator",
+    srcs = ["confidence_landmark_merger_calculator.cc"],
+    deps = [
+        "//mediapipe/framework:calculator_framework",
+        "//mediapipe/framework/formats:landmark_cc_proto",
+        "//mediapipe/framework/api2:node",
+    ],
+)
