Add merger calculator into hand landmarks detector graph - builds but not tested

--- a/mediapipe/tasks/cc/vision/hand_landmarker/BUILD
+++ b/mediapipe/tasks/cc/vision/hand_landmarker/BUILD
@@ -77,6 +77,7 @@ cc_library(
         "//mediapipe/calculators/util:thresholding_calculator",
         "//mediapipe/calculators/util:thresholding_calculator_cc_proto",
         "//mediapipe/calculators/util:world_landmark_projection_calculator",
+        "//mediapipe/calculators/util:confidence_landmark_merger_calculator",
         "//mediapipe/framework/api2:builder",
         "//mediapipe/framework/api2:port",
         "//mediapipe/framework/port:status",
