First attempt at building tests - failing all tests - not sure why

--- a/mediapipe/tasks/cc/vision/hand_landmarker/BUILD
+++ b/mediapipe/tasks/cc/vision/hand_landmarker/BUILD
@@ -206,3 +206,26 @@ cc_library(
     name = "hand_topology",
     hdrs = ["hand_topology.h"],
 )
+
+cc_test(
+    name = "hand_landmarker_test",
+    srcs = ["hand_landmarker_test.cc"],
+    visibility = ["//visibility:public"],
+    deps = [
+        "hand_landmarker",
+        "//mediapipe/tasks/cc/components/containers/proto:landmarks_detection_result_cc_proto",
+        "//mediapipe/tasks/cc/vision/utils:image_utils",
+        "@org_tensorflow//tensorflow/lite:test_util",
+        "//mediapipe/framework:calculator_framework",
+        "//mediapipe/framework:calculator_runner",
+        "//mediapipe/framework/formats:image_frame_opencv",
+        "//mediapipe/framework/formats:rect_cc_proto",
+        "//mediapipe/framework/port:gtest_main",
+        "//mediapipe/framework/port:opencv_core",
+        "//mediapipe/framework/port:opencv_imgproc",
+        "//mediapipe/framework/port:parse_text_proto",
+        "//mediapipe/framework/port:status",
+        "//mediapipe/framework/port:status_matchers",
+        "@com_google_googletest//:gtest_main"
+    ],
+)
