GETI-402 classification calculator hierarchical labels sorting (#124)

--- a/mediapipe/calculators/geti/inference/BUILD
+++ b/mediapipe/calculators/geti/inference/BUILD
@@ -75,6 +75,7 @@ cc_library(
         ":geti_calculator_base",
         "@com_github_tencent_rapidjson//:rapidjson",
         "//third_party/cpp-base64:cpp-base64",
+        "@nlohmann_json//:json",
         "@ovms//src:httppayload",
     ],
     copts = ["-Iexternal/ovms/src","-Isrc"],
