Apple Silicon build setup: iOS configs and zlib fdopen fix\n\n- Update iOS BUILD configs and bundle settings\n- Include third_party/zlib_apple_fdopen_fix.diff for fdopen issue on Apple Silicon\n- Exclude build outputs, .DS_Store, and provisioning profiles

--- a/mediapipe/examples/ios/helloworld/BUILD
+++ b/mediapipe/examples/ios/helloworld/BUILD
@@ -44,7 +44,12 @@ ios_application(
         "Info.plist",
     ],
     minimum_os_version = MIN_IOS_VERSION,
-    provisioning_profile = example_provisioning(),
+    # Only require a provisioning profile for device builds; simulators don't need one.
+    provisioning_profile = select({
+        "//mediapipe:ios_sim_arm64": None,
+        "//mediapipe:ios_x86_64": None,
+        "//conditions:default": example_provisioning(),
+    }),
     deps = [":HelloWorldAppLibrary"],
 )
 
