--- a/mediapipe/examples/ios/handtrackinggpu/BUILD
+++ b/mediapipe/examples/ios/handtrackinggpu/BUILD
@@ -52,8 +52,13 @@ ios_application(
     }),
     deps = [
         ":HandTrackingGpuAppLibrary",
-        "@ios_opencv//:OpencvFramework",
-    ],
+    ] + select({
+        "//third_party:opencv_ios_sim_arm64_source_build": ["@ios_opencv_source//:opencv_xcframework"],
+        "//third_party:opencv_ios_arm64_source_build": ["@ios_opencv_source//:opencv_xcframework"],
+        "//third_party:opencv_ios_x86_64_source_build": ["@ios_opencv_source//:opencv_xcframework"],
+        "//third_party:opencv_ios_sim_fat_source_build": ["@ios_opencv_source//:opencv_xcframework"],
+        "//conditions:default": ["@ios_opencv//:OpencvFramework"],
+    }),
 )
 
 objc_library(
