Add Python 3.13 support and GitHub Actions workflow
This commit adds comprehensive Python 3.13 support to MediaPipe:

## Core Changes
- Add Python 3.13 to hermetic Python configuration in WORKSPACE
- Update requirements to Python 3.13 compatible versions:
  - JAX 0.5.3 (required for Python 3.13)
  - protobuf 5.29.5 (maintain v5.x compatibility)
  - scipy 1.16.3
- Add requirements_lock_3_13.txt for reproducible builds

## Build System
- Update setup.py to version 0.10.14
- Fix module imports in setup.py (__init__.py generation)
- Configure system OpenCV 4.12 for macOS (via Homebrew)
- Update OPENCV_SO_VERSION to 4.12 in third_party/BUILD
- Add macOS linker flags (-undefined dynamic_lookup) for Python extensions

## Code Fixes
- Fix absl::MutexLock pointer/reference issue in calculator_graph.cc
- Fix TextEmbedderResult import in tasks/python/text/__init__.py
- Fix GestureRecognizerResult import in tasks/python/vision/__init__.py
- Remove holistic_landmarker references (deleted in upstream commit 0c6369d)

## Dependencies
- Disable FFmpeg to avoid compatibility issues with FFmpeg 8.0+
- Disable internet-dependent OpenCV modules (gapi, ADE, ObSensor)
- Document OpenCV 4 setup in third_party/opencv_macos.BUILD

## CI/CD
- Add GitHub Actions workflow for building wheels
- Support Python 3.9, 3.10, 3.11, 3.12, 3.13
- Automatic version generation for dev builds
- Wheel artifacts retained for 90 days

## Build Artifacts
- Update .gitignore for Python build artifacts and build.log

Tested: Successfully builds Python 3.13 wheel on macOS ARM64
Build time: ~11 minutes with system OpenCV

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,20 @@ mediapipe/provisioning_profile.mobileprovision
 node_modules/
 .configure.bazelrc
 .user.bazelrc
+
+# Python build artifacts
+build/
+dist/
+*.egg-info/
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+.Python
+venv/
+venv_py*/
+*.so
+*.dylib
+mediapipe/__init__.py.backup
+__init__.py
+build.log
