--- a/mediapipe/tasks/cc/metadata/python/BUILD
+++ b/mediapipe/tasks/cc/metadata/python/BUILD
@@ -11,6 +11,10 @@ pybind_extension(
         "metadata_version.cc",
     ],
     features = ["-use_header_modules"],
+    linkopts = select({
+        "@bazel_tools//src/conditions:darwin": ["-undefined", "dynamic_lookup"],
+        "//conditions:default": [],
+    }),
     module_name = "_pywrap_metadata_version",
     deps = [
         "//mediapipe/tasks/cc/metadata:metadata_version",
