Fix CI test imports by changing directory before testing
The CI tests were failing with "AttributeError: module 'mediapipe' has
no attribute '__version__'" because Python was importing from the source
directory instead of the installed package in site-packages.

When running tests from within the source directory, Python's import
system prioritizes the local mediapipe/ directory over the installed
package. The source directory's __init__.py only contains the copyright
header, while the installed package's __init__.py has __version__
appended by setup.py during the build.

Solution: Change to /tmp before running import tests to ensure Python
imports from the installed package rather than the source directory.

--- a/.github/workflows/build-wheels-py313.yml
+++ b/.github/workflows/build-wheels-py313.yml
@@ -155,6 +155,8 @@ jobs:
           pip install --upgrade pip
           pip install dist/*.whl
 
+          # Change to a different directory to avoid importing from source
+          cd /tmp
           echo "::group::Test imports"
           python -c "import mediapipe; print(f'MediaPipe version: {mediapipe.__version__}')"
           python -c "import mediapipe.tasks.python.vision as vision; print('Vision tasks: OK')"
