Fix lock file naming convention and add Python 3.9 lock file
- Removed incorrectly named lock files with dots (3.9, 3.10, etc.)
- Added requirements_lock_3_9.txt with correct underscore naming
- Updated CI workflow to convert python-version format from dots to
  underscores when loading lock files (e.g., "3.9" -> "3_9")

All lock files now follow the consistent naming pattern:
requirements_lock_3_9.txt, requirements_lock_3_10.txt, etc.

--- a/.github/workflows/build-wheels-py313.yml
+++ b/.github/workflows/build-wheels-py313.yml
@@ -123,7 +123,9 @@ jobs:
       - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip setuptools wheel
-          pip install -r "requirements_lock_${{ matrix.python-version }}.txt"
+          # Convert python-version from "3.9" to "3_9" format for lock file
+          LOCK_VERSION=$(echo "${{ matrix.python-version }}" | tr '.' '_')
+          pip install -r "requirements_lock_${LOCK_VERSION}.txt"
 
       - name: Build wheel
         env:
