--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,10 @@ flatbuffers>=2.0
 jax
 jaxlib
 matplotlib
-numpy<2
-opencv-contrib-python
+numpy<2; python_version < "3.13"
+numpy; python_version >= "3.13"
+opencv-contrib-python<4.12; python_version < "3.13"
+opencv-contrib-python; python_version >= "3.13"
 protobuf>=5.29.3,<6
 sounddevice>=0.4.4
 sentencepiece
