Pin sentencepiece>=0.2.1 for Python 3.13 and regenerate lock file
- Updated requirements.txt to use sentencepiece>=0.2.1 for Python 3.13
  (0.2.0 fails to build on Python 3.13 due to CMake compatibility issues)
- Regenerated requirements_lock_3_13.txt with correct dependencies:
  - sentencepiece==0.2.1
  - opencv-contrib-python==4.12.0.88
  - numpy==2.2.6 (Python 3.13 supports numpy 2.x)

--- a/requirements.txt
+++ b/requirements.txt
@@ -10,4 +10,5 @@ opencv-contrib-python<4.12; python_version < "3.13"
 opencv-contrib-python; python_version >= "3.13"
 protobuf>=5.29.3,<6
 sounddevice>=0.4.4
-sentencepiece
+sentencepiece>=0.2.1; python_version >= "3.13"
+sentencepiece; python_version < "3.13"
