--- a/.github/workflows/build-wheels.yml
+++ b/.github/workflows/build-wheels.yml
@@ -4,11 +4,13 @@ on:
   push:
     branches:
       - master
+      - add-python-3.13-support
     tags:
       - 'v*'
   pull_request:
     branches:
       - master
+      - add-python-3.13-support
   workflow_dispatch:
 
 env:
@@ -22,7 +24,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ['3.10', '3.11', '3.12', '3.13']
+        python-version: ['3.9', '3.10', '3.11', '3.12', '3.13']
 
     steps:
       - name: Checkout repository
